# computer-agent-pro

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: pre-commit.yml
cua2-core/: env.example  pyproject.toml  pytest.ini
cua2-core/src/cua2_core/: app.py  main.py
cua2-core/src/cua2_core/models/: __init__.py  models.py
cua2-core/src/cua2_core/routes/: __init__.py  routes.py  websocket.py
cua2-core/src/cua2_core/services/: __init__.py  agent_service.py  archival_service.py  instruction_service.py  local_desktop.py  local_sandbox_service.py  sandbox_service.py  utils.py
cua2-core/src/cua2_core/services/agent_utils/: desktop_agent.py  function_parser.py  get_model.py  prompt.py
cua2-core/src/cua2_core/services/agent_utils/instruction_utils/: pregenerated_instructions.json
cua2-core/src/cua2_core/websocket/: __init__.py  websocket_manager.py
cua2-core/tests/: __init__.py  test_archival_service.py  test_routes.py
cua2-front/: index.html  package-lock.json  package.json
cua2-front/src/: App.tsx  config.ts  index.css  theme.ts
cua2-front/src/components/: ConnectionStatus.tsx  ExecutionLog.tsx  Header.tsx  PrintStream.tsx  ProcessingIndicator.tsx  WelcomeScreen.tsx  index.ts
cua2-front/src/components/sandbox/: SandboxViewer.tsx  index.ts
cua2-front/src/components/sandbox/completionview/: CompletionView.tsx  DownloadGifButton.tsx  DownloadJsonButton.tsx  index.ts
cua2-front/src/components/steps/: ConnectionStepCard.tsx  FinalStepCard.tsx  StepCard.tsx  StepsList.tsx  ThinkingStepCard.tsx  index.ts
cua2-front/src/components/timeline/: Timeline.tsx
cua2-front/src/config/: api.ts
cua2-front/src/hooks/: index.ts  useAgentWebSocket.ts  useGifGenerator.ts  useJsonExporter.ts  useSendTask.ts  useWebSocket.ts
cua2-front/src/pages/: Task.tsx  Welcome.tsx
cua2-front/src/services/: api.ts  gifGenerator.ts  index.ts  jsonExporter.ts
cua2-front/src/stores/: agentStore.ts
cua2-front/src/types/: agent.ts  gifshot.d.ts
desktop/: Dockerfile  api.py  desktop_mock_win.py  start.sh
docs/: REPLICATION.md
ollama/: entrypoint.sh
scripts/: pull_models.ps1  pull_models.sh  run_backend.ps1  run_desktop.ps1  run_frontend.ps1  setup.ps1  setup.sh
